--- a/_config.yaml
+++ b/_config.yaml
@@ -1,18 +1,18 @@
 ### basic settings
 
 # site properties and page defaults
-title: Lab Website Template
+title: Occupation Lab
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/logo.svg
 header: images/background.jpg
 footer: images/background.jpg
-baseurl: /lab-website-template
+baseurl:
 
 # site social media and other links
 links:
   email: jane.smith@your-lab.com
   google-scholar: Jane Smith
-  github: your-lab
+  github: wanghanye0/occupation-lab
   twitter: YourLabHandle
   instagram: YourLabHandle
   youtube: YourLabChannel
@@ -39,6 +39,11 @@ defaults:
       type: "members"
     values:
       layout: member
+  # markdown files in /_alumni
+  - scope:
+      type: "alumni"
+    values:
+      layout: alumni
   # markdown files in /_posts
   - scope:
       type: "posts"
@@ -48,6 +53,8 @@ defaults:
 # collections
 collections:
   members:
+    output: true
+  alumni:
     output: true
 
 # sass settings
